crates/dag-macros/tests/ui/workflow_delivery_missing_edge.stderr
error: [DAG206] delivery! references missing edge `trigger` -> `sink`
  --> tests/ui/workflow_delivery_missing_edge.rs:40:5
   |
40 |     delivery!(trigger -> sink, mode = exactly_once);
   |     ^^^^^^^^
